--- a/bdd/docker-compose.db.yml
+++ b/bdd/docker-compose.db.yml
@@ -17,7 +17,7 @@ version: '3.8'
 
 services:
   adminer:      # build ok
-    image: adminer-custom:2.0.0
+    image: legrizzly/adminer-custom:2.0.0
     container_name: adminer
     # build:
     #   context: ./docker/adminer
@@ -32,7 +32,7 @@ services:
       - net-for-back
 
   postgres:     # build ok
-    image: pgsql-custom:1.0.4
+    image: legrizzly/pgsql-custom:1.0.4
     container_name: postgres
     # build:
       # context: ./docker/postgres
