--- a/web/docker-compose.web.yml
+++ b/web/docker-compose.web.yml
@@ -30,7 +30,7 @@ services:
       - net-for-front
 
   php:                          # build ok
-    image: php-custom:3.0.1
+    image: legrizzly/php-custom:3.0.1
     container_name: php
     # build:
     #   context: ./docker/php
@@ -42,7 +42,7 @@ services:
       - net-for-back
 
   composer:                     # build ok
-    image: composer-custom:1.0.1
+    image: legrizzly/composer-custom:1.0.1
     container_name: composer
     # build:
     #   context: ./docker/composer
