--- a/web/docker/composer/Dockerfile
+++ b/web/docker/composer/Dockerfile
@@ -12,27 +12,27 @@
 #  |______|  \___|  \_____| |_|    |_| /___| /___| |_|  \__, |
 #                                                        __/ |
 #                                                       |___/
-#  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~_Update: 13/05/23_~~-->
+#  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~_Update: 16/05/23_~~-->
 FROM alpine:3.17.3
 
 RUN apk --repository http://nl.alpinelinux.org/alpine/edge/testing/ add \
     wget \ 
     curl \
     git \
-    php7 \
-    php7-curl \
-    php7-openssl \
-    php7-iconv \
-    php7-json \
-    php7-mbstring \
-    php7-phar && \
+    php81 \
+    php81-curl \
+    php81-openssl \
+    php81-iconv \
+    php81-json \
+    php81-mbstring \
+    php81-phar && \
     rm /var/cache/apk/*
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer 
 
 RUN mkdir -p /var/www
 
-WORKDIR /app
+WORKDIR /var/www
 
 CMD ["/bin/sh"]
 
