--- a/web/docker/php/rootfs/etc/php81/php-fpm.conf
+++ b/web/docker/php/rootfs/etc/php81/php-fpm.conf
@@ -5,8 +5,8 @@ process_control_timeout = 10
 error_log = /proc/self/fd/2
 
 [www]
-user = root
-group = root
+user = www-data
+group = www-data
 listen = [::]:9000
 chdir = /var/www/html
 
@@ -18,19 +18,3 @@ pm.start_servers = 60
 pm.min_spare_servers = 25
 pm.max_spare_servers = 100
 pm.max_requests = 1000
-
-listen.backlog = -1
-rlimit_files = 65536
-rlimit_core = unlimited
-catch_workers_output = yes
-decorate_workers_output = no
-
-request_slowlog_timeout = 5s
-request_terminate_timeout = 120s
-slowlog = /var/log/$pool.log.slow
-
-pm.status_path = /fpm_status
-ping.path = /fpm_ping
-ping.response = pong
-
-clear_env = no
