--- a/bdd/docker/postgres/Dockerfile
+++ b/bdd/docker/postgres/Dockerfile
@@ -40,7 +40,7 @@ ENV PGDATA /var/lib/postgresql/data
 
 # this 777 will be replaced by 700 at runtime (allows semi-arbitrary "--user" values)
 RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 1777 "$PGDATA"
-VOLUME /var/lib/postgresql/data
+# VOLUME /var/lib/postgresql/data
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
